i have fixed horizonatal scrollbar on mobile device

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@
   }
 }
 
+html,body{
+  overflow-x: hidden;
+}
+
 .btn-effect {
   overflow: hidden;
   position: relative;
